      easy to understand guiopts.lua file
    - debugging information will not be saved on disk since this version of the 
      program; read carefully an appropriate chapter of program's handbook for 
      detailed instructions about kernel mode driver debugging instead
    - few fatal driver bugs were fixed
    - driver's reliability was increased
    - NOTE FOR PROGRAMMERS: to successfully recompile the driver run 
      configure.pl script and click 'Apply patch to MinGW' button once again


  Version 3.1.0 (33.0)   2009-05-13
  ------------------------------------------------------------------------------
    - this is the first really stable release
    - graphical interface was completely rewritten
    - gui program was translated into the following languages:

      Danish, Farsi, Swedish, Turkish

    - a lot of GUI bugs were fixed
    - very important driver bugs were fixed


  Version 3.0.0 (29.5)   2009-03-15
  ------------------------------------------------------------------------------
    - defragmentation algorithm was completely rewritten to be more effective
    - free space optimization algorithm was completely rewritten 
      to be more effective
    - a lot of important bugs were fixed

                                    ***

  Version 2.1.2 (30.0)   2009-02-18
  ------------------------------------------------------------------------------
    - few important bugs were fixed


  Version 2.1.1 (30.0)   2009-02-16
  ------------------------------------------------------------------------------
    - Japanese translation was made
    - column widths in GUI are now adjustable
    - processor architecture check was added to installer
    - most known bugs were fixed


  Version 2.1.0 (30.0)   2009-02-09
  ------------------------------------------------------------------------------
    - debug logging feature was added
    - website was completely redesigned
    - UltraDefrag Handbook was added
    - many important x64 bugs were fixed