@@ -260,6 +260,9 @@
 		<p style="text-align:left">Please report all problems and bugs via our bug tracker: 
 
 		<a href="http://ultradefrag.sourceforge.net/bugs">http://ultradefrag.sourceforge.net/bugs</a></p>
+		
+		<p style="text-align:left">The most recent version of this handbook can be obtained from 
+		program's <a href="http://ultradefrag.svn.sourceforge.net/viewvc/ultradefrag/doc/html/handbook.tar.gz?view=tar">SVN repository</a>.</p>
 	</div>
 </div>
 
